# ghreport

./: .gitignore  .makim.yaml  .pre-commit-config.yaml  .prettierignore  .releaserc.json  LICENSE  README.md  mkdocs.yaml  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: main.yaml  release.yaml
conda/: dev.yaml
docs/: contributing.md  installation.md  spec.md
ghreport/: __init__.py  cli.py  config.py  generator.py  main.py  reader.py  report.py
ghreport/templates/: template.md
scripts/: gen_ref_nav.py
src/ghreport/: __init__.py  __main__.py  cli.py  config.py  generator.py  main.py  reader.py  report.py
src/ghreport/templates/: search.graphql  template.md
tests/: .ghreport.yaml  test_ghreport.py
