[project]
name = "ghreport"
version = "0.1.0"  # semantic-release
description = "GitHub Report tool"
authors = [
  {name = "Ivan Ogasawara", email = "ivan.ogasawara@gmail.com"}
]
license = "BSD 3 Clause"
repository = "https://github.com/osl-incubator/ghreport"
homepage = "https://github.com/osl-incubator/ghreport"
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
  "aiohttp >=3.7.1",
  "Jinja2 >=3",
  "requests >=2.23",
  "python-dotenv >=0.21.1",
  "pandas >=1.4.2",
  "pandoc >=2.1",
  "tabulate >=0.8.9",
  "websockets >=8.1",
  "gql >=3",
  "atpublic >=4.0",
  "pyyaml >=5.4",
]

[tool.poetry]
packages = [
  {include = "ghreport", from="src"},
]
include = [
  "src/ghreport/py.typed",
  "src/ghreport/schema.json",
]
exclude = [
  ".git/*",
  ".env*",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[project.scripts]
"ghreport" = "ghreport.__main__:main"


[tool.poetry.group.dev.dependencies]
pytest = ">=8"
pre-commit = ">=3"
mypy = ">=1"
pytest-cov = ">=3.0.0"
mkdocs = ">=1.3"
mkdocs-exclude = ">=1.0.2"
mkdocs-jupyter = ">=0.24.7"
mkdocs-literate-nav = ">=0.4.1"
mkdocs-macros-plugin = ">=0.6.3"
mkdocs-material = ">=8"
mkdocstrings = {version=">=0.19.0", extras=["python"]}
ruff = ">=0.1.5"
bandit = ">=1.7.5"
vulture = ">=2.7"
jupyterlab = ">=4.1.5"
nox = ">=2024.3.2"
nbconvert = ">=7.16.3"
pymdown-extensions = ">=10.7.1"
# workaround pip install issues
multidict = ">=6.6.0"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
exclude = ["scripts/"]


[tool.ruff]
line-length = 79
force-exclude = true
src = ["./src/ghreport", "./tests"]
exclude = [
  "docs",
]
fix = true

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  # "D",   # pydocstyle
  "YTT", # flake8-2020
  "PL",  # PL
  "RUF", # Ruff-specific rules
  "I001", # isort
  "I002", # isort
]
ignore = ["RUF012"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
# Use a single line between direct and from import
lines-between-types = 1

[tool.ruff.format]
quote-style = "single"


[tool.bandit]
exclude_dirs = ["tests"]
targets = "src/ghreport/"
skips = ["B102", "B701", "B507", "B601", "B603", "B105", "B307"]

[tool.vulture]
exclude = ["tests"]
ignore_decorators = []
ignore_names = ["verbose", "dry_run", "skip_hooks"]
make_whitelist = true
min_confidence = 80
paths = ["src/ghreport/"]
sort_by_size = true
verbose = false
